--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ChuckieSite</title>
+  <title>Chuckie the Cat</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel=stylesheet href="src/app/app.component.css">
 </head>
 <body>
   <app-root></app-root>
